--- a/Billed-app-FR-Front/package.json
+++ b/Billed-app-FR-Front/package.json
@@ -28,6 +28,7 @@
     "@testing-library/dom": "^7.20.0",
     "@testing-library/jest-dom": "^5.11.0",
     "@testing-library/user-event": "^12.0.11",
+    "@types/testing-library__jest-dom": "^5.14.2",
     "babel-jest": "^26.1.0",
     "jest": "^26.1.0",
     "jest-environment-jsdom": "^27.4.6",
